# amongsol

./: Cargo.toml
backend/: Cargo.toml
backend/src/: errors.rs  main.rs
backend/src/compiler/: runner.rs
backend/src/game/: manager.rs  mod.rs  roles.rs  session.rs  timer.rs
backend/src/ws/: handler.rs  messages.rs  mod.rs  router.rs  routes.rs
challenges/transfer/: Cargo.toml
challenges/transfer/src/: lib.rs
challenges/transfer/tests/: transfer_test.rs
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/game/[roomId]/: page.tsx
frontend/app/lobby/[roomId]/: page.tsx
frontend/app/meeting/[roomId]/: page.tsx
frontend/app/results/[roomId]/: page.tsx
frontend/app/vote/[roomId]/: page.tsx
frontend/lib/: socket.ts
src/: lib.rs  main.rs  storage.rs  todo_struct.rs
