[package]
name = "solsabotage-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solsabotage-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dashmap = "5"
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
futures-util = "0.3"
tokio-tungstenite = "0.21"
